crates/reddb-server/tests/snapshots/probabilistic_parser_snapshots__prob_create_filter_no_name.snap
---
source: crates/reddb-server/tests/probabilistic_parser_snapshots.rs
expression: "fmt_parse_error(\"CREATE FILTER\")"
---
input: "CREATE FILTER"
kind:  Syntax
error: Parse error at 1:14: Unexpected token: EOF (expected: identifier)
