crates/reddb-server/tests/snapshots/probabilistic_parser_snapshots__prob_create_hll_no_name.snap
---
source: crates/reddb-server/tests/probabilistic_parser_snapshots.rs
expression: "fmt_parse_error(\"CREATE HLL\")"
---
input: "CREATE HLL"
kind:  Syntax
error: Parse error at 1:11: Unexpected token: EOF (expected: identifier)
