crates/reddb-server/tests/snapshots/probabilistic_parser_snapshots__prob_create_unknown_kind.snap
---
source: crates/reddb-server/tests/probabilistic_parser_snapshots.rs
assertion_line: 53
expression: "fmt_parse_error(\"CREATE BLOOM b1\")"
---
input: "CREATE BLOOM b1"
kind:  Syntax
error: Parse error at 1:1: Unexpected token: BLOOM (expected: TABLE, GRAPH, VECTOR, DOCUMENT, KV, COLLECTION, INDEX, UNIQUE, METRIC, TIMESERIES, QUEUE, TREE, HLL, SKETCH, FILTER, SCHEMA, SEQUENCE, USER, MIGRATION)
