crates/reddb-server/tests/snapshots/probabilistic_parser_snapshots__prob_filter_capacity_negative.snap
---
source: crates/reddb-server/tests/probabilistic_parser_snapshots.rs
expression: "fmt_parse_error(\"CREATE FILTER f1 CAPACITY -1\")"
---
input: "CREATE FILTER f1 CAPACITY -1"
kind:  ValueOutOfRange { field: "CAPACITY", constraint: "must be a positive integer" }
error: Parse error at 1:27: CAPACITY must be a positive integer
