crates/reddb-server/tests/snapshots/probabilistic_parser_snapshots__prob_filter_capacity_non_numeric.snap
---
source: crates/reddb-server/tests/probabilistic_parser_snapshots.rs
expression: "fmt_parse_error(\"CREATE FILTER f1 CAPACITY many\")"
---
input: "CREATE FILTER f1 CAPACITY many"
kind:  Syntax
error: Parse error at 1:27: Unexpected token: many (expected: integer)
