crates/reddb-server/tests/snapshots/probabilistic_parser_snapshots__prob_filter_check_no_element.snap
---
source: crates/reddb-server/tests/probabilistic_parser_snapshots.rs
expression: "fmt_parse_error(\"FILTER CHECK seen\")"
---
input: "FILTER CHECK seen"
kind:  Syntax
error: Parse error at 1:18: Unexpected token: EOF (expected: string)
