crates/reddb-server/tests/snapshots/probabilistic_parser_snapshots__prob_filter_delete_no_element.snap
---
source: crates/reddb-server/tests/probabilistic_parser_snapshots.rs
expression: "fmt_parse_error(\"FILTER DELETE seen\")"
---
input: "FILTER DELETE seen"
kind:  Syntax
error: Parse error at 1:19: Unexpected token: EOF (expected: string)
