crates/reddb-server/tests/snapshots/probabilistic_parser_snapshots__prob_filter_eof_after_keyword.snap
---
source: crates/reddb-server/tests/probabilistic_parser_snapshots.rs
expression: "fmt_parse_error(\"FILTER\")"
---
input: "FILTER"
kind:  Syntax
error: Parse error at 1:7: Unexpected token: EOF (expected: ADD, CHECK, DELETE, COUNT, INFO)
