crates/reddb-server/tests/snapshots/probabilistic_parser_snapshots__prob_hll_add_no_name.snap
---
source: crates/reddb-server/tests/probabilistic_parser_snapshots.rs
expression: "fmt_parse_error(\"HLL ADD\")"
---
input: "HLL ADD"
kind:  Syntax
error: Parse error at 1:8: Unexpected token: EOF (expected: identifier)
